# acms80870_project_palathinkal

./: .gitignore  README.md  code0_initial_clean.ipynb  code1_initial_clean.ipynb  code1_sigcap.ipynb  code1_sigcap_clean.ipynb  code2_sigcap_pathloss_model.ipynb  environment.yml
data/sigcap_data/: 2023_09_S08_1811_E08_1942Z-0400_outdoor_CBRS_7ed6caec_CBRS_SB_cell.csv  2023_09_S10_1736_E10_1954Z-0400_outdoor_CBRS_7ed6caec_sb_cbrs_sep_10.debug_cell.csv
dsiplib/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  earfcn_to_freq.py  pyproject.toml
dsiplib/docs/: Makefile  conf.py  example.ipynb  make.bat
dsiplib/src/dsiplib/: __init__.py  earfcn_to_freq.py  haversine.py
dsiplib/tests/: test_dsiplib.py  test_earfcn_to_freq.py  test_haversine.py
final_project/: environment.yml
final_project/data/: antenna.csv  coverage_map.csv
final_project/documents/Figures/: .$Figures_PPT.drawio.bkp  (+1 more)
final_project/notebooks/: code0_initial_clean.ipynb  code1_sigcap.ipynb  code1_sigcap_clean.ipynb  code2_sigcap_pathloss_model.ipynb  code4_beamforming.ipynb  code5_data_prep.ipynb  code5_learning.ipynb  code6_learning.ipynb
final_project/python/: calc_bearing.py  gain_calc.py  haversine.py
sigcap_data/data/: 2023_09_S06_1937_E06_2012Z-0400_outdoor_NBM_S_7ed6caec_cbrs_nav_cell.csv  2023_09_S14_1556_E14_1742Z-0400_outdoor_NBM_Sol_7ed6caec_CBRS_cell.csv  2023_09_S14_1743_E14_1902Z-0400_outdoor_CBRS_39d72bc8_CBRS_s21_ultra_cell.csv  2023_09_S14_2101_E14_2353Z_CBRS_39d72bc8_navarre_westtower.csv  2023_09_S18_1702_E18_1953Z-0400_outdoor_CBRS_SB_Riley_Hayes.debug_cell.csv
