[tool.poetry]
name = "dsiplib"
version = "0.1.0"
description = "EARFCN2freq and Haversine calculation functions are implemented in this package."
authors = ["Joshua Roy Palathinkal"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
